package AparelhoTelefonico;

import java.util.Scanner;

public class AparelhoTelefonico {
	
	
	
	public void ligar() {
		String numero = "345678";
	
		System.out.println("Ligando para numero: " + numero);
	}
	
	public void atender() {
		System.out.println ("Atendendo telefone");
	}
	
	public void iniciarCorreioVoz() {
		System.out.println("Correio de voz");
	}
	
	

}


