package NavegadorInternet;

import java.util.Scanner;

public class NavegadorInternet {
	String url = "www.site.com.br";
	
	public void exibirPagina() {

	System.out.println("A url acessada é: " +  url);
	}
	
	public void adicionarNovaAba() {
		System.out.println("Adicionar nova aba");
	}
	
	public void atualizarPagina() {
		System.out.println("Página atualizada");
	}

}

