package ReprodutorMusical;

import java.util.Scanner;

public class ReprodutorMusical {
	
	String musica = "hino";
	public void selecionarMusica() {
	
		System.out.println("A musica selecionada é: " + musica);
	}
	
	public void tocar() {
		System.out.println("Musica tocando");
	}
	
	public void pausar() {
		System.out.println("Musica pausada");
	}

}

